测试问题处理

--- a/files/登录_注册/styles.css
+++ b/files/登录_注册/styles.css
@@ -508,7 +508,7 @@ body.a {  background-color:rgba(255, 255, 255, 1);
   background-image:none;
   position:static;
   left:auto;
-  width:375px;
+  width:320px;
   margin-left:0;
   margin-right:0;
   text-align:left;
@@ -517,65 +517,128 @@ body.a {  background-color:rgba(255, 255, 255, 1);
   position:absolute;
   left:0px;
   top:0px;
-  width:375px;
-  height:647px;
+  width:320px;
+  height:549px;
 }
 #u7.a {
+  width:320px;
+  height:549px;
 }
 #u7_img.a {
+  width:320px;
+  height:549px;
 }
 #u8.a {
+  top:266px;
+  width:316px;
 }
 #u9.a {
+  left:40px;
+  top:290px;
+  width:239px;
+  height:50px;
 }
 #u9_img.a {
+  width:239px;
+  height:50px;
 }
 #u10.a {
+  top:17px;
+  width:235px;
 }
 #u11.a {
+  left:161px;
+  width:159px;
+  height:54px;
 }
 #u11_img.a {
+  width:159px;
+  height:54px;
 }
 #u12.a {
+  top:19px;
+  width:155px;
 }
 #u13.a {
+  left:101px;
+  top:397px;
+  width:121px;
+  height:44px;
 }
 #u13_img.a {
+  width:121px;
+  height:44px;
 }
 #u14.a {
+  top:14px;
+  width:117px;
 }
 #u15.a {
+  width:320px;
+  height:548px;
 }
 #u15_img.a {
+  width:320px;
+  height:548px;
 }
 #u16.a {
+  top:266px;
+  width:316px;
 }
 #u17.a {
+  left:164px;
+  top:239px;
+  width:137px;
+  height:57px;
 }
 #u17_img.a {
+  width:137px;
+  height:57px;
 }
 #u18.a {
+  top:20px;
+  width:133px;
 }
 #u19.a {
+  left:190px;
+  top:183px;
+  width:96px;
+  height:57px;
 }
 #u19_img.a {
+  width:96px;
+  height:57px;
 }
 #u20.a {
+  top:20px;
+  width:92px;
 }
 #u21.a {
+  left:177px;
+  top:351px;
+  width:137px;
+  height:26px;
 }
 #u21_img.a {
+  width:137px;
+  height:26px;
 }
 #u22.a {
+  top:5px;
+  width:133px;
 }
 #u23.a {
+  left:38px;
+  top:376px;
+  width:242px;
+  height:55px;
 }
 #u23_div.a {
   position:absolute;
   left:0px;
   top:0px;
-  width:284px;
-  height:65px;
+  width:242px;
+  height:55px;
   background:inherit;
   background-color:rgba(39, 71, 136, 1);
   box-sizing:border-box;
@@ -590,15 +653,21 @@ body.a {  background-color:rgba(255, 255, 255, 1);
   color:#FFFFFF;
 }
 #u24.a {
+  top:16px;
+  width:238px;
 }
 #u25.a {
+  left:190px;
+  top:296px;
+  width:96px;
+  height:55px;
 }
 #u25_div.a {
   position:absolute;
   left:0px;
   top:0px;
-  width:113px;
-  height:65px;
+  width:96px;
+  height:55px;
   background:inherit;
   background-color:rgba(39, 71, 136, 1);
   box-sizing:border-box;
@@ -613,33 +682,59 @@ body.a {  background-color:rgba(255, 255, 255, 1);
   color:#FFFFFF;
 }
 #u26.a {
+  top:16px;
+  width:92px;
 }
 #u27.a {
+  width:160px;
+  height:60px;
 }
 #u27_img.a {
+  width:160px;
+  height:60px;
 }
 #u28.a {
+  top:22px;
+  width:156px;
 }
 #u29.a {
+  left:99px;
+  top:486px;
+  width:121px;
+  height:44px;
 }
 #u29_img.a {
+  width:121px;
+  height:44px;
 }
 #u30.a {
+  top:14px;
+  width:117px;
 }
 #u31.a {
+  width:320px;
+  height:548px;
 }
 #u31_img.a {
+  width:320px;
+  height:548px;
 }
 #u32.a {
+  top:266px;
+  width:316px;
 }
 #u33.a {
+  left:38px;
+  top:348px;
+  width:71px;
+  height:44px;
 }
 #u33_div.a {
   position:absolute;
   left:0px;
   top:0px;
-  width:83px;
-  height:52px;
+  width:71px;
+  height:44px;
   background:inherit;
   background-color:rgba(255, 255, 255, 1);
   box-sizing:border-box;
@@ -654,15 +749,21 @@ body.a {  background-color:rgba(255, 255, 255, 1);
   color:#274788;
 }
 #u34.a {
+  top:6px;
+  width:67px;
 }
 #u35.a {
+  left:110px;
+  top:348px;
+  width:11px;
+  height:44px;
 }
 #u35_div.a {
   position:absolute;
   left:0px;
   top:0px;
-  width:13px;
-  height:52px;
+  width:11px;
+  height:44px;
   background:inherit;
   background-color:rgba(255, 255, 255, 1);
   box-sizing:border-box;
@@ -675,28 +776,52 @@ body.a {  background-color:rgba(255, 255, 255, 1);
   box-shadow:none;
 }
 #u36.a {
+  top:14px;
+  width:7px;
 }
 #u37.a {
+  left:130px;
+  top:345px;
+  width:148px;
+  height:52px;
 }
 #u37_img.a {
+  width:148px;
+  height:52px;
 }
 #u38.a {
+  top:18px;
+  width:144px;
 }
 #u39.a {
+  left:100px;
+  top:450px;
+  width:121px;
+  height:44px;
 }
 #u39_img.a {
+  width:121px;
+  height:44px;
 }
 #u40.a {
+  top:14px;
+  width:117px;
 }
 #u6_state0.a {
+  width:320px;
+  height:549px;
   background-color:rgba(255, 255, 255, 0);
   background-image:none;
 }
 #u6_state1.a {
+  width:320px;
+  height:549px;
   background-color:rgba(255, 255, 255, 0);
   background-image:none;
 }
 #u6_state2.a {
+  width:320px;
+  height:549px;
   background-color:rgba(255, 255, 255, 0);
   background-image:none;
 }
@@ -704,7 +829,7 @@ body.b {  background-color:rgba(255, 255, 255, 1);
   background-image:none;
   position:static;
   left:auto;
-  width:375px;
+  width:414px;
   margin-left:0;
   margin-right:0;
   text-align:left;
@@ -713,65 +838,128 @@ body.b {  background-color:rgba(255, 255, 255, 1);
   position:absolute;
   left:0px;
   top:0px;
-  width:375px;
-  height:647px;
+  width:414px;
+  height:716px;
 }
 #u7.b {
+  width:414px;
+  height:717px;
 }
 #u7_img.b {
+  width:414px;
+  height:717px;
 }
 #u8.b {
+  top:350px;
+  width:410px;
 }
 #u9.b {
+  left:52px;
+  top:379px;
+  width:309px;
+  height:65px;
 }
 #u9_img.b {
+  width:309px;
+  height:65px;
 }
 #u10.b {
+  top:24px;
+  width:305px;
 }
 #u11.b {
+  left:209px;
+  width:205px;
+  height:71px;
 }
 #u11_img.b {
+  width:205px;
+  height:71px;
 }
 #u12.b {
+  top:28px;
+  width:201px;
 }
 #u13.b {
+  left:130px;
+  top:518px;
+  width:157px;
+  height:58px;
 }
 #u13_img.b {
+  width:157px;
+  height:58px;
 }
 #u14.b {
+  top:21px;
+  width:153px;
 }
 #u15.b {
+  width:414px;
+  height:716px;
 }
 #u15_img.b {
+  width:414px;
+  height:716px;
 }
 #u16.b {
+  top:350px;
+  width:410px;
 }
 #u17.b {
+  left:212px;
+  top:312px;
+  width:178px;
+  height:74px;
 }
 #u17_img.b {
+  width:178px;
+  height:74px;
 }
 #u18.b {
+  top:29px;
+  width:174px;
 }
 #u19.b {
+  left:246px;
+  top:239px;
+  width:125px;
+  height:74px;
 }
 #u19_img.b {
+  width:125px;
+  height:74px;
 }
 #u20.b {
+  top:29px;
+  width:121px;
 }
 #u21.b {
+  left:229px;
+  top:458px;
+  width:178px;
+  height:34px;
 }
 #u21_img.b {
+  width:178px;
+  height:34px;
 }
 #u22.b {
+  top:9px;
+  width:174px;
 }
 #u23.b {
+  left:50px;
+  top:491px;
+  width:314px;
+  height:72px;
 }
 #u23_div.b {
   position:absolute;
   left:0px;
   top:0px;
-  width:284px;
-  height:65px;
+  width:314px;
+  height:72px;
   background:inherit;
   background-color:rgba(39, 71, 136, 1);
   box-sizing:border-box;
@@ -786,15 +974,21 @@ body.b {  background-color:rgba(255, 255, 255, 1);
   color:#FFFFFF;
 }
 #u24.b {
+  top:24px;
+  width:310px;
 }
 #u25.b {
+  left:246px;
+  top:386px;
+  width:125px;
+  height:72px;
 }
 #u25_div.b {
   position:absolute;
   left:0px;
   top:0px;
-  width:113px;
-  height:65px;
+  width:125px;
+  height:72px;
   background:inherit;
   background-color:rgba(39, 71, 136, 1);
   box-sizing:border-box;
@@ -809,33 +1003,59 @@ body.b {  background-color:rgba(255, 255, 255, 1);
   color:#FFFFFF;
 }
 #u26.b {
+  top:25px;
+  width:121px;
 }
 #u27.b {
+  width:208px;
+  height:77px;
 }
 #u27_img.b {
+  width:208px;
+  height:77px;
 }
 #u28.b {
+  top:30px;
+  width:204px;
 }
 #u29.b {
+  left:128px;
+  top:635px;
+  width:157px;
+  height:58px;
 }
 #u29_img.b {
+  width:157px;
+  height:58px;
 }
 #u30.b {
+  top:21px;
+  width:153px;
 }
 #u31.b {
+  width:414px;
+  height:716px;
 }
 #u31_img.b {
+  width:414px;
+  height:716px;
 }
 #u32.b {
+  top:350px;
+  width:410px;
 }
 #u33.b {
+  left:49px;
+  top:455px;
+  width:92px;
+  height:57px;
 }
 #u33_div.b {
   position:absolute;
   left:0px;
   top:0px;
-  width:83px;
-  height:52px;
+  width:92px;
+  height:57px;
   background:inherit;
   background-color:rgba(255, 255, 255, 1);
   box-sizing:border-box;
@@ -850,15 +1070,21 @@ body.b {  background-color:rgba(255, 255, 255, 1);
   color:#274788;
 }
 #u34.b {
+  top:20px;
+  width:88px;
 }
 #u35.b {
+  left:142px;
+  top:455px;
+  width:14px;
+  height:57px;
 }
 #u35_div.b {
   position:absolute;
   left:0px;
   top:0px;
-  width:13px;
-  height:52px;
+  width:14px;
+  height:57px;
   background:inherit;
   background-color:rgba(255, 255, 255, 1);
   box-sizing:border-box;
@@ -871,28 +1097,52 @@ body.b {  background-color:rgba(255, 255, 255, 1);
   box-shadow:none;
 }
 #u36.b {
+  top:20px;
+  width:10px;
 }
 #u37.b {
+  left:168px;
+  top:450px;
+  width:192px;
+  height:67px;
 }
 #u37_img.b {
+  width:192px;
+  height:67px;
 }
 #u38.b {
+  top:26px;
+  width:188px;
 }
 #u39.b {
+  left:129px;
+  top:588px;
+  width:157px;
+  height:57px;
 }
 #u39_img.b {
+  width:157px;
+  height:57px;
 }
 #u40.b {
+  top:20px;
+  width:153px;
 }
 #u6_state0.b {
+  width:414px;
+  height:716px;
   background-color:rgba(255, 255, 255, 0);
   background-image:none;
 }
 #u6_state1.b {
+  width:414px;
+  height:716px;
   background-color:rgba(255, 255, 255, 0);
   background-image:none;
 }
 #u6_state2.b {
+  width:414px;
+  height:716px;
   background-color:rgba(255, 255, 255, 0);
   background-image:none;
 }
