--- a/files/菜单/styles.css
+++ b/files/菜单/styles.css
@@ -858,6 +858,8 @@ body.a {  background-color:rgba(255, 255, 255, 1);
 #u241.a {
 }
 #u242.a {
+  left:60px;
+  top:473px;
 }
 #u242_div.a {
   position:absolute;
@@ -1205,6 +1207,8 @@ body.b {  background-color:rgba(255, 255, 255, 1);
 #u241.b {
 }
 #u242.b {
+  left:108px;
+  top:568px;
 }
 #u242_div.b {
   position:absolute;
